# shisen-web

./: Cargo.toml  README.md  index.css  index.html
.github/workflows/: deploy.yml
pkg/: README.md  package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
src/: asset.rs  lib.rs  shisen.rs  util.rs  web.rs
