[package]
name = "shisen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.57"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
itertools = "0.10.3"
rand = "0.8.5"
seed = "0.9.1"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "HtmlAudioElement",
    "HtmlImageElement",
    "ImageBitmap",
]
